--- a/src/index.jade
+++ b/src/index.jade
@@ -1,3 +1,7 @@
 include template/header
 .index-wrapper
+    h1 Современный учебник Javascript
+    ul
+      li
+          a(href="first-steps.html" title="Основы JavaScript") Основы JavaScript
 include template/footer
