--- a/src/template/footer.jade
+++ b/src/template/footer.jade
@@ -1,4 +1,4 @@
-script(src="./js/mainUglify.js")
-script(src="./js/main.js")
+script(defer src="./js/mainUglify.js")
+script(defer src="./js/main.js")
 </body>
 </html>
