--- a/src/template/header.jade
+++ b/src/template/header.jade
@@ -3,6 +3,6 @@ doctype html
 head
   meta(charset="utf-8")
   meta(name="viewport" content="width=device-width, initial-scale=1")
-  title DANCE-COOL
+  title LEARN-JS
   link(rel='stylesheet', href='./css/main.css')
 <body>
