start /testing#вложенный-describe

--- a/src/index.jade
+++ b/src/index.jade
@@ -3,5 +3,9 @@ include template/header
     h1 Современный учебник Javascript
     ul
       li
-          a(href="first-steps.html" title="Основы JavaScript") Основы JavaScript
+        a(href="first-steps.html" title="Основы JavaScript").
+          Основы JavaScript
+      li
+        a(href="testing.html" title="Автоматические тесты при помощи chai и mocha").
+          Автоматические тесты при помощи chai и mocha
 include template/footer
