--- a/src/testing.jade
+++ b/src/testing.jade
@@ -28,6 +28,7 @@ include template/header
     function pow(x, n) {
       var result = x;
 
+      if (n < 0 || isZerroToZerro(x, n) || !isInteger(n) ) return NaN;
       if (!n) return 1;
 
       for (var i = 1; i < n; i++) {
@@ -37,30 +38,50 @@ include template/header
       return result;
     }
 
-  script.
+    function isInteger(n) {
+      if ( (~~n) === n) {
+        return true;
+      }
+      return false;
+    }
+
+    function isZerroToZerro(x, n) {
+      console.log(x,n)
+      if ( !x && !n ) return true;
+    }
+
     describe("pow", function () {
 
-      it("возводит в 3-ю степень", function () {
-        assert.equal(pow(2, 3), 8);
-      });
       it("возводит в 0-ю степень", function () {
         assert.equal(pow(2, 0), 1);
       });
-      it("возводит в 4-ю степень", function () {
-        assert.equal(pow(3, 4), 81);
+
+      describe("возводит x в степень n", function() {
+        function makeTest(x) {
+          var expected = x * x * x;
+
+          it("при возведении " + x + " в степень 3 результат: " + expected, function () {
+            assert.equal(pow(x, 3), expected);
+          });
+        };
+
+        for (var x = 1; x <= 5; x++) {
+          makeTest(x);
+        }
       });
 
-      function makeTest(x) {
-        var expected = x * x * x;
+      it("при возведении в отрицательную степень результат NaN", function () {
+        assert(isNaN(pow(2, -1)));
+      });
 
-        it("при возведении " + x + " в степень 3 результат: " + expected, function () {
-          assert.equal(pow(x, 3), expected);
-        });
-      };
+      it("при возведении в дробную степень результат NaN", function () {
+        assert(isNaN(pow(2, 1.5)));
+      });
 
-      for (var x = 1; x <= 5; x++) {
-        makeTest(x);
-      }
+      it("ноль в нулевой степени даёт NaN", function () {
+        assert(isNaN(pow(0, 0)));
+      });
+
 
     });
 
