start exersice /number

--- a/src/index.jade
+++ b/src/index.jade
@@ -8,4 +8,7 @@ include template/header
       li
         a(href="testing.html" title="Автоматические тесты при помощи chai и mocha").
           Автоматические тесты при помощи chai и mocha
+      li
+        a(href="data-structures.html" title="Структуры данных").
+          Структуры данных
 include template/footer
