--- a/src/index.jade
+++ b/src/index.jade
@@ -11,4 +11,7 @@ include template/header
       li
         a(href="data-structures.html" title="Структуры данных").
           Структуры данных
+      li
+        a(href="functions-closures.html" title="Замыкания, область видимости").
+          Замыкания, область видимости
 include template/footer
