--- a/src/functions-closures.jade
+++ b/src/functions-closures.jade
@@ -6,3 +6,4 @@ include template/header
   h1 Замыкания, область видимости
   p Понимание «области видимости» и «замыканий» – ключевое в изучении JavaScript, без них «каши не сваришь».
   p В этом разделе мы более глубоко изучаем переменные и функции – и замыкания в том числе.
+include template/footer
