start chapter 'objects-more'

--- a/src/index.jade
+++ b/src/index.jade
@@ -14,4 +14,7 @@ include template/header
       li
         a(href="functions-closures.html" title="Замыкания, область видимости").
           Замыкания, область видимости
+      li
+        a(href="objects-more.html" title="Методы объектов и контекст вызова").
+          Методы объектов и контекст вызова
 include template/footer
