start exercise on /misc-js

--- a/src/index.jade
+++ b/src/index.jade
@@ -17,4 +17,7 @@ include template/header
       li
         a(href="objects-more.html" title="Методы объектов и контекст вызова").
           Методы объектов и контекст вызова
+      li
+        a(href="js-misc.html" title="Некоторые другие возможности").
+          Некоторые другие возможности
 include template/footer
