--- a/src/index.jade
+++ b/src/index.jade
@@ -20,4 +20,7 @@ include template/header
       li
         a(href="js-misc.html" title="Некоторые другие возможности").
           Некоторые другие возможности
+      li
+        a(href="es-modern.html" title="Современные возможности ES-2015").
+          Современные возможности ES-2015
 include template/footer
