--- a/src/index.jade
+++ b/src/index.jade
@@ -1,26 +1,37 @@
 include template/header
 .index-wrapper
-    h1 Современный учебник Javascript
-    ul
-      li
-        a(href="first-steps.html" title="Основы JavaScript").
-          Основы JavaScript
-      li
-        a(href="testing.html" title="Автоматические тесты при помощи chai и mocha").
-          Автоматические тесты при помощи chai и mocha
-      li
-        a(href="data-structures.html" title="Структуры данных").
-          Структуры данных
-      li
-        a(href="functions-closures.html" title="Замыкания, область видимости").
-          Замыкания, область видимости
-      li
-        a(href="objects-more.html" title="Методы объектов и контекст вызова").
-          Методы объектов и контекст вызова
-      li
-        a(href="js-misc.html" title="Некоторые другие возможности").
-          Некоторые другие возможности
-      li
-        a(href="es-modern.html" title="Современные возможности ES-2015").
-          Современные возможности ES-2015
+  h1 Современный учебник Javascript
+  ul
+    li
+      ul
+        li 
+          h3 Часть первая - Язык JavaScript
+        li
+          a(href="first-steps.html" title="Основы JavaScript").
+            Основы JavaScript
+        li
+          a(href="testing.html" title="Автоматические тесты при помощи chai и mocha").
+            Автоматические тесты при помощи chai и mocha
+        li
+          a(href="data-structures.html" title="Структуры данных").
+            Структуры данных
+        li
+          a(href="functions-closures.html" title="Замыкания, область видимости").
+            Замыкания, область видимости
+        li
+          a(href="objects-more.html" title="Методы объектов и контекст вызова").
+            Методы объектов и контекст вызова
+        li
+          a(href="js-misc.html" title="Некоторые другие возможности").
+            Некоторые другие возможности
+        li
+          a(href="es-modern.html" title="Современные возможности ES-2015").
+            Современные возможности ES-2015
+    li
+      ul
+        li 
+          h3 Часть вторая - Документ, события, интерфейсы
+        li
+          a(href="document.html" title="Документ и объекты страницы").
+            Документ и объекты страницы
 include template/footer
