the last exercise /searching-elements-dom

--- a/src/document.jade
+++ b/src/document.jade
@@ -26,6 +26,38 @@ include template/header
         li Координаты в окне
         li Координаты в документе
         li Итого
+    
+    ul#ul1
+        li
+            | Животные
+            ul
+                li
+                    | Млекопитающие
+                    ul
+                        li Коровы
+                        li Ослы
+                        li Собаки
+                        li Тигры
+                li
+                    | Другие
+                    ul
+                        li Змеи
+                        li Птицы
+                        li Ящерицы
+        li
+            | Рыбы
+            ul
+                li
+                    | Аквариумные
+                    ul
+                        li Гуппи
+                        li Скалярии
+                li
+                    | Морские
+                    ul
+                        li Морская форель
+
+
     style.
         table {
         border-collapse: collapse;
