start /basic-dom-node-properties

--- a/src/document.jade
+++ b/src/document.jade
@@ -26,38 +26,32 @@ include template/header
         li Координаты в окне
         li Координаты в документе
         li Итого
-    
+    h4 Задача 3
+    h4 Задача 2
     ul#ul1
-        li
-            | Животные
+        li Животные
             ul
-                li
-                    | Млекопитающие
+                li Млекопитающие
                     ul
                         li Коровы
                         li Ослы
                         li Собаки
                         li Тигры
-                li
-                    | Другие
+                li Другие
                     ul
                         li Змеи
                         li Птицы
                         li Ящерицы
-        li
-            | Рыбы
+        li Рыбы
             ul
-                li
-                    | Аквариумные
+                li Аквариумные
                     ul
                         li Гуппи
                         li Скалярии
-                li
-                    | Морские
+                li Морские
                     ul
                         li Морская форель
-
-
+    h4 Задача 1
     style.
         table {
         border-collapse: collapse;
