start 2 exercise /modifying-document

--- a/src/document.jade
+++ b/src/document.jade
@@ -27,6 +27,7 @@ include template/header
         li Координаты в документе
         li Итого
     h4 Задача 4
+        div#elem4
     h4 Задача 3
         div(id="widget" data-widget-name="menu") Выберите сайт
         style.
