start exercise 'Почему остаётся' on the /modifying-document

--- a/src/document.jade
+++ b/src/document.jade
@@ -27,27 +27,40 @@ include template/header
         li Координаты в документе
         li Итого
     h4 Задача 4
-        div#elem4
+    table#table4
+        tr
+            td Это
+            td Все
+            td Элементы DOM
+    ol#ol4
+        li Вася
+        li Петя
+        li Маша
+        li Даша
+    div#elem4
+    div#div4
+        div Это
+        div Элементы
     h4 Задача 3
-        div(id="widget" data-widget-name="menu") Выберите сайт
-        style.
-            .external {
-                background-color: yellow
-            }
-        a(name='list') список
-        ul
-            li
-                a(href='http://google.com') http://google.com
-            li
-                a(href='/tutorial') /tutorial.html
-            li
-                a(href='local/path') local/path
-            li
-                a(href='ftp://ftp.com/my.zip') ftp://ftp.com/my.zip
-            li
-                a(href='http://nodejs.org') http://nodejs.org
-            li
-                a(href='http://internal.com/test') http://internal.com/test
+    div(id="widget" data-widget-name="menu") Выберите сайт
+    style.
+        .external {
+            background-color: yellow
+        }
+    a(name='list') список
+    ul
+        li
+            a(href='http://google.com') http://google.com
+        li
+            a(href='/tutorial') /tutorial.html
+        li
+            a(href='local/path') local/path
+        li
+            a(href='ftp://ftp.com/my.zip') ftp://ftp.com/my.zip
+        li
+            a(href='http://nodejs.org') http://nodejs.org
+        li
+            a(href='http://internal.com/test') http://internal.com/test
     h4 Задача 2
     ul#ul1
         li Животные
