exercise calendar /modifying-document

--- a/src/document.jade
+++ b/src/document.jade
@@ -26,6 +26,43 @@ include template/header
         li Координаты в окне
         li Координаты в документе
         li Итого
+    h7 Задача 8
+    #container8
+    h7 Задача 7
+    #container7
+        ul
+            li
+                | Животные
+                ul
+                    li
+                        | Млекопитающие
+                        ul
+                            li Коровы
+                            li Ослы
+                            li Собаки
+                            li Тигры
+                    li
+                        | Другие
+                        ul
+                            li Змеи
+                            li Птицы
+                            li Ящерицы
+            li
+                | Рыбы
+                ul
+                    li
+                        | Аквариумные
+                        ul
+                            li Гуппи
+                            li Скалярии
+                    li
+                        | Морские
+                        ul
+                            li Морская форель
+    h4 Задача 6
+    div#container6
+    h4 Задача 5
+    ul#ul5 Щёлкни чтобы добавить пункты <
     h4 Задача 4
     table#table4
         tr
