start /multi-insert

--- a/src/document.jade
+++ b/src/document.jade
@@ -26,8 +26,12 @@ include template/header
         li Координаты в окне
         li Координаты в документе
         li Итого
+    h7 Задача 9
+    #container9
+        p Часики
     h7 Задача 8
     #container8
+        p Календарик
     h7 Задача 7
     #container7
         ul
