start /document-write

--- a/src/document.jade
+++ b/src/document.jade
@@ -30,7 +30,7 @@ style.
         li Итого
     h7 Задача 11
     p Сортировка таблицы по щелчку на заголовке;
-    table#container11
+    table
         tbody
             tr
                 th(data-sort-table="string") Имя
@@ -42,6 +42,36 @@ style.
                 td Петров
                 td Александрович
                 td 10
+            tr
+                td А
+                td Б
+                td Е
+                td 1
+            tr
+                td Б
+                td А
+                td Д
+                td 2
+            tr
+                td В
+                td Г
+                td Г
+                td 3
+            tr
+                td Г
+                td В
+                td В
+                td 4
+            tr
+                td Д
+                td Е
+                td Б
+                td 5
+            tr
+                td Е
+                td Д
+                td А
+                td 6
             tr
                 td Петя
                 td Иванов
