--- a/src/document.jade
+++ b/src/document.jade
@@ -28,6 +28,24 @@ style.
         li Координаты в окне
         li Координаты в документе
         li Итого
+    style.
+        .notification {
+            position: fixed;
+            z-index: 1000;
+            padding: 5px;
+            border: 1px solid black;
+            font: normal 20px Georgia;
+            background: white;
+            text-align: center;
+        }
+        .welcome {
+            background: red;
+            color: yellow;
+        }
+    h7 Задача 13
+    #container13
+    h7 Задача 12
+    #container12
     h7 Задача 11
     p Сортировка таблицы по щелчку на заголовке;
     table
