--- a/src/document.jade
+++ b/src/document.jade
@@ -28,6 +28,73 @@ style.
         li Координаты в окне
         li Координаты в документе
         li Итого
+    h7 Задача 17 (распахнуть элемент)
+    style.
+        #elem17 {
+            width: 200px;
+            height: 150px;
+            background-color: red;
+            padding: 20px;
+            overflow: auto;
+        }
+
+        #container17 {
+            border: 1px solid black;
+        }
+    #container17
+        #elem17
+            | текст текст текст текст текст текст текст текст 
+            | текст текст текст текст текст текст текст текст 
+            | текст текст текст текст текст текст текст текст 
+            | текст текст текст текст текст текст текст текст 
+            | текст текст текст текст текст текст текст текст 
+            | текст текст текст текст текст текст текст текст 
+            | текст текст текст текст текст текст текст текст 
+            | текст текст текст текст текст текст текст текст 
+            | текст текст текст текст текст текст текст текст 
+            | текст текст текст текст текст текст текст текст 
+            | текст текст текст текст текст текст текст текст 
+            | текст текст текст текст текст текст текст текст 
+            | текст текст текст текст текст текст текст текст 
+            | текст текст текст текст текст текст текст текст 
+            | текст текст текст текст текст текст текст текст 
+            | текст текст текст текст текст текст текст текст 
+    h7 Задача 16
+    style.
+        #field {
+            width: 200px;
+            border: 10px groove black;
+            background-color: #00FF00;
+            position: relative;
+        }
+        #ball {
+            position: absolute;
+        }
+    #container16
+        #field
+            img(src="https://js.cx/clipart/ball.svg" id="ball" width="40" height="40")
+            | . . . . . . . . . . . . . . . . . . . . . . . . . . 
+            | . . . . . . . . . . . . . . . . . . . . . . . . . . 
+            | . . . . . . . . . . . . . . . . . . . . . . . . . . 
+            | . . . . . . . . . . . . . . . . . . . . . . . . . . 
+            | . . . . . . . . . . . . . . . . . . . . . . . . . . 
+            | . . . . . . . . . . . . . . . . . . . . . . . . . . 
+            | . . . . . . . . . . . . . . . . . . .
+  
+    h7 Задача 15
+    style.
+        #moving-div {
+            border: 5px groove green;
+            padding: 5px;
+            margin: 10px;
+            background-color: yellow;
+        }
+    #container15(style="position: relative")
+        | Before Before Before
+        #moving-div
+            | Text Text Text<br>
+            | Text Text Text<br>
+        | After After After
     style.
         .notification {
             position: fixed;
@@ -42,6 +109,29 @@ style.
             background: red;
             color: yellow;
         }
+    h7 Задача 14 (кликните, чтобы узнать размер нижнего скролла в консоли);
+    #container14(style="width: 200px; height: 200px; border: 2px solid grey; overflow: auto; padding: 7px;")
+        p.
+            Было бы полезно начать с истории языка. JavaScript был создан в 1995 
+            Бренданом Айком, инженером в компании Netscape. Первый релиз 
+            состоялся вместе с выходом браузера Netscape 2 в начале 1996 года. 
+            Сначала язык назывался LiveScript, но затем был переименован в связи с 
+            маркетинговыми целями, чтобы сыграть на популярности языка Java 
+            компании Sun Microsystem — несмотря на это языки практически не 
+            имеют ничего общего друг с другом. Так было положено начало 
+            путаницы между этими языками.
+        p.
+            Чуть позже Microsoft выпустила очень похожий и практически 
+            совместимый язык JScript, который шёл вместе с IE3. 
+            Через пару месяцев Netscape отправил язык в Ecma International, 
+            Европейскую организацию занимающуюся стандартами, 
+            которая выпустила первую версию стандарта ECMAScript в 1997. 
+            Стандарт получил значимое обновление в ECMAScript edition 3 в 
+            1999, и остается самым стабильным до сегодняшнего дня. 
+            Четвертая версия была отклонена, из-за проблем с 
+            усложнениями в языке. Многие вещи из четвертого издания 
+            послужили основой для стандарта ECMAScript 5 
+            (декабрь 2009) и ECMAScript 6 (июнь 2015).
     h7 Задача 13
     #container13
     h7 Задача 12
