exercise /metrics-window

--- a/src/document.jade
+++ b/src/document.jade
@@ -28,6 +28,7 @@ style.
         li Координаты в окне
         li Координаты в документе
         li Итого
+    h7 Задача 18 (Полифилл для pageYOffset в IE8)
     h7 Задача 17 (распахнуть элемент)
     style.
         #elem17 {
