--- a/src/document.jade
+++ b/src/document.jade
@@ -28,7 +28,11 @@ style.
         li Координаты в окне
         li Координаты в документе
         li Итого
+    h7 Задача 19
+    #container19
     h7 Задача 18 (Полифилл для pageYOffset в IE8)
+    #container18.
+        Щёлкните, чтобы проверить
     h7 Задача 17 (распахнуть элемент)
     style.
         #elem17 {
