exercise /coordinates-documen

--- a/src/document.jade
+++ b/src/document.jade
@@ -29,12 +29,12 @@ style.
         li Координаты в документе
         li Итого
     h7 Задача 21
-    #container21
+    #container21 (кликните чтобы увидеть Область видимости для документа в консоли)
     h7 Задача 20 (кликните на ЦИТАТУ чтобы увидеть заметки: 2000ms)
     style.
         .note20 {
             top: 100px;
-            position: fixed;
+            position: absolute;
             z-index: 1000;
             padding: 5px;
             border: 1px solid black;
