start chapter "events-and-interfaces"

--- a/src/document.jade
+++ b/src/document.jade
@@ -455,4 +455,5 @@ style.
             td 3:5
             td 4:5
             td 5:5
+script(defer src="./js/document.js")
 include template/footer
