--- a/src/index.jade
+++ b/src/index.jade
@@ -34,4 +34,7 @@ include template/header
         li
           a(href="document.html" title="Документ и объекты страницы").
             Документ и объекты страницы
+        li
+          a(href="events-and-interfaces.html" title="Основы работы с событиями").
+            Основы работы с событиями
 include template/footer
