--- a/src/events-and-interfaces.jade
+++ b/src/events-and-interfaces.jade
@@ -17,5 +17,9 @@ style.
         li Приём проектирования "поведение"
         li Действия браузера по умолчанию
         li Генерация событий на элементах
+    h7 Задача 1
+    #container1
+        input(id="input1" type="button" value="Нажмите, чтобы спрятать текст")
+        div(id="text1") Текст
 script(defer src="./js/events-and-interfaces.js")
 include template/footer
