exercise /introduction-browser-events

--- a/src/events-and-interfaces.jade
+++ b/src/events-and-interfaces.jade
@@ -42,6 +42,7 @@ style.
         .ul {
             height: 130px;
             width: 9999px;
+            transition: all .55s ease-out;
             margin: 0;
             padding: 0;
             list-style: none;
